# sim8085wasm

./: .gitignore  CMakeLists.txt  README.md  TODO.md  generate_logo.html  package-lock.json  package.json  sim.worker.js  workerProxy.js  workerProxy.test.js
.githooks/: pre-commit  pre-commit.sh
.github/workflows/: deploy.yml
core/: sim8085_api.c  sim8085_api.h  sim8085_core.c  sim8085_core.h  test_main.c
design/: DESIGN_SYSTEM.md  README.md
design/tokens/: colors_and_type.css
design/ui_kit/: README.md  app.jsx  components.jsx  index.html  seven-seg.jsx  styles.css
web/: README.md  TESTING.md  build-wasm.mjs  gen-favicon.mjs  gen-gifs.mjs  gen-screenshots.mjs  index.html  package-lock.json  package.json  vite.config.js  vitest.setup.js
web/public/: manifest.json  privacy.html  sim.worker.js  sim8085.js  sw.js  terms.html
web/src/: App.css  App.jsx  AsmEditor.jsx  AudioPanel.jsx  BrandMenu.jsx  BreadboardView.jsx  CalcFloat.jsx  CalcFloat.test.jsx  CallStackPanel.jsx  ChallengesView.jsx  ChatPanel.jsx  CommunityView.jsx  ConsolePanel.jsx  DisasmPanel.jsx  DriveLoadModal.jsx  ErrorBoundary.jsx  ExampleMenu.jsx  FlagPanel.jsx  GithubSetupModal.jsx  HelpMenu.jsx  HelpModal.jsx  HelpPanel.jsx  IOPortPanel.jsx  InstHelpPopup.jsx  InterruptPanel.jsx  LedBreadboardPanel.jsx  LedDisplay.jsx  MemMapPanel.jsx  MemPanel.jsx  PIT8253Panel.jsx  PPI8255Panel.jsx  PairPanel.jsx  PanelHelp.jsx  PanelWorkspace.jsx  PanelsMenu.jsx  PopoutWindow.jsx  RegPanel.jsx  ShortcutsModal.jsx  SimulatorContext.jsx  StackPanel.jsx  (+24 more)
